@@ -1,6 +1,8 @@
 # version 0.62.4
 24/01/2020
    - Removed salt from config and updated config files.
+05/02/2020
+   - Added welcome page.   
 
 # version 0.62.3
 03/12/2019
